[package]
name = "lottery"
version = "0.1.0"
authors = ["Yifan Yuan <nigel434@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.22"               # Parse command line argument by defining a struct.
rand = "0.8.4"              # Random number generators and other randomness functionality.
